--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -6,8 +6,11 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>MainServlet</servlet-name>
-        <url-pattern>/MainServlet</url-pattern>
+        <url-pattern>/index</url-pattern>
     </servlet-mapping>
+    <welcome-file-list>
+        <welcome-file>index</welcome-file>
+    </welcome-file-list>
     <session-config>
         <session-timeout>
             30
